[gd_scene load_steps=5 format=3 uid="uid://fcen2m0rg10c"]

[ext_resource type="Texture2D" uid="uid://dmjk33nosu5j2" path="res://Assets/Icons/SpriteSheet.png" id="1_f23hb"]
[ext_resource type="Script" path="res://Scripts/gem.gd" id="1_xlp2s"]
[ext_resource type="AudioStream" uid="uid://b22pgl4snqnao" path="res://Assets/Soud effects/448080__breviceps__wet-click.wav" id="2_56woy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nkvn8"]

[node name="Gem" type="RigidBody2D" groups=["Gemas"]]
collision_layer = 8
mass = 0.01
script = ExtResource("1_xlp2s")
picked_sfx = ExtResource("2_56woy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.25, 0)
scale = Vector2(0.989796, 1)
texture = ExtResource("1_f23hb")
region_enabled = true
region_rect = Rect2(339, 434, 39, 39)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.49012e-08, 0)
scale = Vector2(1.255, 1.255)
shape = SubResource("CircleShape2D_nkvn8")

[node name="Timer1" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="Timer1" to="." method="_on_timer_1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
